--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/prueba.jpg") top center;
+  background: url("../img/backgroundHero.jpg") top center;
 background-size: cover;
 background-repeat: no-repeat;
 }
