--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -149,7 +147,7 @@ h6 {
   list-style: none;
 }
 
-.nav-menu>ul>li {
+.nav-menu > ul > li {
   position: relative;
   white-space: nowrap;
 }
@@ -175,7 +173,7 @@ h6 {
 .nav-menu a:hover,
 .nav-menu .active,
 .nav-menu .active:focus,
-.nav-menu li:hover>a {
+.nav-menu li:hover > a {
   text-decoration: none;
   color: #fff;
 }
@@ -183,7 +181,7 @@ h6 {
 .nav-menu a:hover i,
 .nav-menu .active i,
 .nav-menu .active:focus i,
-.nav-menu li:hover>a i {
+.nav-menu li:hover > a i {
   color: #149ddd;
 }
 
@@ -223,9 +221,10 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
+  background-color: #0f6197;
   background: url("../img/backgroundHero.jpg") top center;
-background-size: cover;
-background-repeat: no-repeat;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #hero:before {
@@ -364,20 +363,19 @@ section {
 # portfolio
 --------------------------------------------------------------*/
 
-.container-logos{
+.container-logos {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.content-image-logo{
+.content-image-logo {
   width: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
 }
-.content-image-logo img{
+.content-image-logo img {
   width: 100%;
 }
 
@@ -397,7 +395,7 @@ section {
   margin-top: -2px;
   border-left: 2px solid #1f5297;
   position: relative;
-  margin-left:30px ;
+  margin-left: 30px;
 }
 
 .resume .resume-item h4 {
@@ -408,7 +406,6 @@ section {
   font-family: "Poppins", sans-serif;
   color: #050d18;
   margin-bottom: 10px;
-
 }
 
 .resume .resume-item h5 {
@@ -528,7 +525,7 @@ section {
   background: rgba(20, 157, 221, 0.95);
 }
 
-.portfolio .portfolio-wrap .portfolio-links a+a {
+.portfolio .portfolio-wrap .portfolio-links a + a {
   border-left: 1px solid #37b3ed;
 }
 
@@ -544,7 +541,6 @@ section {
   opacity: 1;
   bottom: 0;
 }
-
 
 /*--------------------------------------------------------------
 # Services
@@ -707,7 +703,7 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .error-message br+br {
+.contact .php-email-form .error-message br + br {
   margin-top: 25px;
 }
 
@@ -726,8 +722,6 @@ section {
   text-align: center;
   padding: 15px;
 }
-
-
 
 .contact .php-email-form .form-group {
   margin-bottom: 15px;
@@ -752,7 +746,7 @@ section {
   padding: 10px 15px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .php-email-form button[type="submit"] {
   background: #149ddd;
   border: 0;
   padding: 10px 24px;
@@ -761,7 +755,7 @@ section {
   border-radius: 4px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .php-email-form button[type="submit"]:hover {
   background: #37b3ed;
 }
 
@@ -807,11 +801,11 @@ section {
   font-size: 15px;
 }
 
-.breadcrumbs ol li+li {
+.breadcrumbs ol li + li {
   padding-left: 10px;
 }
 
-.breadcrumbs ol li+li::before {
+.breadcrumbs ol li + li::before {
   display: inline-block;
   padding-right: 10px;
   color: #0e2442;
@@ -847,7 +841,6 @@ section {
   /* background: #040b14; */
   height: 80px;
   max-height: 200px;
- 
 }
 
 #footer .copyright {
@@ -868,40 +861,30 @@ section {
 @media (max-width: 1199px) {
   #footer {
     position: static;
-    width:100%;
+    width: 100%;
     padding-right: 20px 15px;
-
-   
   }
-
- 
 
   #footer .copyright {
     left: 43%;
     top: 30px;
   }
-
 }
 @media (max-width: 1199px) {
-
-
- 
-
   #footer .copyright {
     display: none;
   }
-
 }
 /* cv */
-.cv{
+.cv {
   width: 150px;
   height: 45px;
-  background: linear-gradient(135deg,#f403d1,#64b5f6);
+  background: linear-gradient(135deg, #f403d1, #64b5f6);
   border-radius: 10px;
   padding: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: bold;
-  color: #FFF;
+  color: #fff;
 }
